# Aria_data_tools

./: .gitmodules  404.html  BUILD.md  Dockerfile  README.md  index.html  sitemap.xml
.github/workflows/: build-and-test.yml  build-and-test_projects.yml  build-wheel-and-deploy.yml
_src/: FAQ.md  FAQ.mdx  aria-vrs.mdx  citation-contribute.md  install.md  install.mdx  overview.md  overview.mdx  sensors-measurements.md  sensors-measurements.mdx  use-vrs.md
_src/howto/: MPS.mdx  calibration.md  calibration.mdx  dataprovider.md  dataprovider.mdx  examples.md  examples.mdx  visualizing.md
_src/pilotdata/: location-output.mdx  pilotdata-index.md  reprojected-gaze.mdx  speech2text.md  speech2text.mdx  timestamps.md  timestamps.mdx
_src/pilotdata/desk/: desktop_overview.mdx
_src/pilotdata/everyday/: activities.md  activities.mdx  everyday.md  scripts.md  scripts.mdx  sensor-profiles.md  sensor-profiles.mdx
assets/css/: styles.26ee0415.css  styles.2e2cdbb2.css  styles.4cc25dab.css  styles.707c3ebb.css  styles.7603c748.css  styles.a24a293c.css
assets/js/: 026b0a57.439cd9ac.js  026b0a57.618d5cd4.js  026b0a57.7ccc3b2d.js  026b0a57.88c550eb.js  026b0a57.8b72b89e.js  026b0a57.d4dbfde8.js  046e2194.02400cc1.js  046e2194.033e8d40.js  046e2194.992bac1c.js  046e2194.b0a799b7.js  046e2194.cd8037fc.js  046e2194.f3a27424.js  09c5b479.12f1d056.js  09c5b479.1dc710d5.js  09c5b479.1dca34e8.js  09c5b479.a7cf70b3.js  09c5b479.bf7f9d74.js  09c5b479.c1b89159.js  09c5b479.c86eeb30.js  09c5b479.e77df9d1.js  0b185270.5761c693.js  0b185270.b3bbf532.js  0b185270.b6ccf19c.js  0ce2a568.3010624d.js  0ce2a568.34f2f8cf.js  0ce2a568.65c83d63.js  0ce2a568.98e28fe1.js  0ce2a568.f5dad0fe.js  12edbc5e.20793613.js  12edbc5e.2927907a.js  12edbc5e.5aee57c8.js  135.ccdcabbd.js  147.42416109.js  17896441.cad9f1db.js  17896441.f5e1bac7.js  17896441.f9a674a0.js  17896441.ff96f1da.js  178c2bc9.697834ad.js  178c2bc9.69c9a140.js  178c2bc9.a95c793d.js  (+254 more)
blog/archive/: index.html
data/: sample_calib.json
docs/Install/: index.html
docs/aria-vrs/: index.html
docs/citation-contribute/: index.html
docs/faq/: index.html
docs/howto/calibration/: index.html
docs/howto/dataprovider/: index.html
docs/howto/examples/: index.html
docs/howto/mps/: index.html
docs/howto/visualizing/: index.html
docs/license/: index.html
docs/overview/: index.html
docs/sensors-measurements/: index.html
docs/tags/: index.html
docs/use-vrs/: index.html
markdown-page/: index.html
projects/AriaPilotDatasetTools/: CMakeLists.txt  PilotDataset.cpp  PilotDataset.h
projects/EgoExo/: CMakeLists.txt  CompressedIStream.cpp  CompressedIStream.h  Data3DGui.cpp  Data3DGui.h  GlobalPointCloud.h  GlobalPointCloudReader.cpp  GlobalPointCloudReader.h  GoProCalibration.h  GoProCalibrationReader.cpp  GoProCalibrationReader.h  ReadMe.md  main.cpp
python/eyetorch/: README.md
src/: CMakeLists.txt  ReadMe.md  pyproject.toml  pyproject_arm64.toml  setup.py
src/data_provider/: AriaDataProvider.h  AriaStreamIds.cpp  AriaStreamIds.h  AriaVrsDataProvider.cpp  AriaVrsDataProvider.h  CMakeLists.txt  speech_to_text_datum.h  utils.cpp  utils.h
src/data_provider/data_layout/: CMakeLists.txt
src/data_provider/data_layout/aria/: GpsMetadata.h
src/data_provider/data_layout/aria/sample_app/: AriaFileReader.cpp
src/data_provider/examples/: ReadMe.md  readSelected.cpp
src/data_provider/examples/folder_data_provider/: AriaFolderDataProvider.cpp  AriaFolderDataProvider.h  AriaFolderDataProviderPyBind.cpp  CMakeLists.txt  ReadMe.md
src/data_provider/mps_io/: CMakeLists.txt  eyeGazeReader.cpp  eyeGazeReader.h  onlineCalibrationReader.cpp  trajectoryReader.cpp  trajectoryReader.h
src/data_provider/mps_visualization/: AriaViewer.cpp  AriaViewer.h  CMakeLists.txt  main_eyegaze.cpp  main_trajectory.cpp
src/data_provider/players/: AriaAudioPlayer.cpp  AriaAudioPlayer.h  AriaBarometerPlayer.cpp  AriaBarometerPlayer.h  AriaBluetoothBeaconPlayer.cpp  AriaBluetoothBeaconPlayer.h  AriaGpsPlayer.cpp  AriaGpsPlayer.h  AriaImageSensorPlayer.cpp  AriaImageSensorPlayer.h  AriaMotionSensorPlayer.cpp  AriaMotionSensorPlayer.h  AriaPosePlayer.cpp  AriaPosePlayer.h  AriaTimeSyncPlayer.cpp  AriaTimeSyncPlayer.h  AriaWifiBeaconPlayer.cpp  AriaWifiBeaconPlayer.h  CMakeLists.txt
src/dataset_provider/: CMakeLists.txt
src/dataset_provider/pilot/: PilotDataset.cpp  PilotDataset.h
src/dataset_provider/pilot/viewer/: PilotDatasetViewer.h  main.cpp
src/experimental/: CMakeLists.txt  ImageMutationFilterCopier.h  main.cpp
src/python/: AriaDataProviderPyBind.cpp  AriaDataProviderPyBind.h  AriaPlayersPyBind.cpp  AriaPlayersPyBind.h  AriaViewerPyBind.cpp  AriaViewerPyBind.h  DeviceModelPyBind.cpp  DeviceModelPyBind.h  MpsIOPyBind.h  SensorsExample.py  bindings.cpp
src/python/tutorials/: DataProvider_ImageTimeline.py  Sensors.py
src/scripts/: build_pyark_wheel_mac_arm64.sh  install_compile_3rd_party.sh  install_deps_centos.sh  install_deps_debian.sh  install_deps_mac.sh  install_manylinux_deps.sh
src/sensors/: CMakeLists.txt
src/sensors/camera/math/optimization/: IgnoreJetInfinitesimal.h
src/sensors/camera/projection/: FisheyeRadTanThinPrism.h  KannalaBrandtK3.h  common.h
src/sensors/examples/: CMakeLists.txt  example.py  main.cpp
src/sensors/models/: DeviceModel.cpp  DeviceModel.h  README.md
src/sensors/perception/camera/projection/: FisheyeRadTanThinPrism.h  KannalaBrandtK3.h  common.h
src/sensors/perception/math/optimization/: IgnoreJetInfinitesimal.h
src/sensors/tests/: CMakeLists.txt  DeviceModelTests.cpp
src/sensors/utility/: VrsUtils.cpp  VrsUtils.h
src/visualization/: AriaViewer.cpp  AriaViewer.h  AriaViewerBase.cpp  AriaViewerBase.h  CMakeLists.txt  main.cpp  main.py  main_aria_sensors_viewer.cpp  main_multi.cpp
website/: docusaurus.config.js  package.json
website/docs/: FAQ.md  acknowledgements.md  aria-vrs.md  bibliography.md  citation-contribute.md  citation-contribute.mdx  examples.md  install.md  install.mdx  license.md  overview.md  privacy.md  sensors-measurements.md  sensors-measurements.mdx  use-vrs.md  use-vrs.mdx
(+57 files in other folders)
